# kami_airline

./: .env.example  .flake8  .gitignore  README.md  pyproject.toml  requirements.txt
airplane/: admin.py  models.py  serializers.py  urls.py  views.py
airplane/migrations/: 0001_initial.py
airplane/tests/: tests_models.py  tests_views.py
config/: admin.py  settings.py  urls.py
