[tool.poetry]
name = "kami-airlines"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2"
black = "^23.12.0"
flake8 = "^6.1.0"
djangorestframework = "^3.14.0"
django-debug-toolbar = "^4.2.0"
django-filter = "^23.5"
drf-standardized-errors = "^0.12.6"
coverage = "^7.3.4"
faker = "^21.0.0"
factory-boy = "^3.3.0"
python-dotenv = "^1.0.0"
whitenoise = "^6.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310'] 
